--- a/j_chris_miller_python/Django/survey_main/apps/survey/templates/survey/index.html
+++ b/j_chris_miller_python/Django/survey_main/apps/survey/templates/survey/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id = "wrapper">
-		<form action = 'survey/process' method = "POST">
+		<form action = '/process' method = "POST">
 		{% csrf_token %}
 			<p>
 				Your Name: <input type="text" name = "name">
